--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
  <body> 
   <nav> 
       <ul> 
-          <li><a href="/">Home</a></li> 
+          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Home</a></li> 
           <li><a href="/blog">Blog</a></li> 
       </ul> 
   </nav> 
