--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,11 @@
  <body> 
   <nav> 
       <ul> 
-          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Home</a></li> 
-          <li><a href="/blog">Blog</a></li> 
-      </ul> 
+          <li><a href="/">Home</a></li> 
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Surprise</a></li> 
+
+   </ul> 
   </nav> 
   <div class="container"> 
    
