--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
       <ul> 
           <li><a href="/">Home</a></li> 
           <li><a href="/blog">Blog</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Surprise</a></li> 
+          <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Surprise</a></li> 
 
    </ul> 
   </nav> 
